--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,7 +52,7 @@ server {
 
       location /ipcat {
 
-      proxy_pass   http://gobackend:5000;
+      proxy_pass   http://ipcat-canary:5000;
       proxy_redirect     default;
       proxy_http_version 1.1;
       proxy_set_header   Host              $host;
