--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ http {
 
 server {
         listen 443 ssl proxy_protocol;
-        server_name devops.zuoguocai.xyz;
+        server_name devops2020.zuoguocai.xyz;
         ssl_certificate      /web/daohang/ssl/zuoguocai.xyz.cert;
         ssl_certificate_key  /web/daohang/ssl/zuoguocai.xyz.key;
         ssl_session_timeout  5m;
