--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,14 +22,11 @@ http {
     default_type        application/octet-stream;
 
 server {
-        listen 80 proxy_protocol;
+        listen 80 ;
         server_name _;
         
        
-
-
-	set_real_ip_from 0.0.0.0/0;
-	real_ip_header proxy_protocol;
+	
  
 
         location / {
