--- a/install_jenkins_in_k8s/jenkins-slave/Dockerfile
+++ b/install_jenkins_in_k8s/jenkins-slave/Dockerfile
@@ -1,6 +1,7 @@
-##slave.jar通过url下载  wget  http://myci.zuoguocai.xyz:11180//jnlpJars/slave.jar
+##agent.jar通过url下载  wget  http://myci.zuoguocai.xyz:11180//jnlpJars/agent.jar
 FROM centos:7
 LABEL maintainer="zuoguocai@126.com"  version="2.0" description="jenkins-slave"
+
 
 
 RUN yum install -y java-1.8.0-openjdk maven curl git libtool-ltdl-devel && \ 
@@ -8,10 +9,10 @@ RUN yum install -y java-1.8.0-openjdk maven curl git libtool-ltdl-devel && \
     rm -rf /var/cache/yum/* && \
     mkdir -p /usr/share/jenkins
 
-COPY slave.jar /usr/share/jenkins/slave.jar 
-COPY start-jenkins-slave.sh /usr/bin/start-jenkins-slave.sh
+COPY agent.jar /usr/share/jenkins/agent.jar 
 COPY settings.xml /etc/maven/settings.xml
-RUN chmod +x /usr/bin/start-jenkins-slave.sh
+COPY jenkins-agent /usr/local/bin/jenkins-agent
+RUN chmod +x /usr/local/bin/jenkins-agent &&\
+    ln -s /usr/local/bin/jenkins-agent /usr/local/bin/jenkins-slave
 
-ENTRYPOINT ["start-jenkins-slave.sh"]
-
+ENTRYPOINT ["jenkins-agent"]
